# exoplanet-analysis

./: .gitignore  CHANGELOG.md  MANIFEST.in  PUBLISHING.md  README.md  REFACTORING_NOTES.md  exoplanetlib.py  fitlib.py  get_derived_parameters.py  gp_lib.py  modelslib.py  priorslib.py  pyproject.toml  rvutils.py  tess.py  tess_ffi_lc.py  tess_ttv.py  transit_fit.py  transit_fit_gp.py  transit_rv_fit.py
.github/workflows/: ci.yml  release.yml
example/: TOI-1759_lbl.pars  lbl_TOI-1759_GL846_drift.rdb
examples/: WASP-108_system_example.json  rv_calibration_posterior.pars  system_template.json
notebooks/: 01_getting_started.ipynb  02_tess_photometry_transit_fit.ipynb  03_radial_velocities.ipynb  04_joint_fit_derived_parameters.ipynb  05_rossiter_mclaughlin.ipynb  06_joint_photometry_rv_rm.ipynb  07_gaussian_processes_activity.ipynb  calibration_posterior.json  rv_calibration_posterior.json  simulate-exoplanet-rvs.ipynb
notebooks/data/: README.md
notebooks/data/TOI-3568/: TOI-3568.pars  TOI-3568_maroon-x_blue.rdb  TOI-3568_maroon-x_red.rdb  TOI-3568_posterior.json  TOI-3568_posterior.pars  TOI-3568_spirou_binned.rdb  corrected_lc_corrector-PLD-tic-160390955-sector-15-cindex-1.fits
notebooks/data/WASP-108/: WASP-108_coralie.rdb  WASP-108_ghost_blue_ccfrv_corr.rdb  WASP-108_ghost_red_ccfrv_corr.rdb  WASP-108_joint.pars  WASP-108_opd_bc06_lc.fits  WASP-108_rm.pars  tess2019112060037-s0011-0000000404340025-0143-s_lc.fits  tess2021091135823-s0037-0000000404340025-0208-s_lc.fits  tess2021118034608-s0038-0000000404340025-0209-s_lc.fits  tess2023096110322-s0064-0000000404340025-0257-s_lc.fits
priors/: TOI-1759_000.pars  gp-priors.pars
src/exoplanet_analysis/: __init__.py  config.py  datasets.py  exoplanetlib.py  fitlib.py  gp_lib.py  priorslib.py  rmlib.py  rvutils.py  systemlib.py  tess.py  timeseries_lib.py
src/exoplanet_analysis/data/: tess_objects.json
src/exoplanet_analysis/scripts/: __init__.py  check_tess_data.py  detect_transits.py  fit_opd_transits.py  fit_sparc4_transits.py  get_derived_parameters.py  gls_analysis.py  gp_analysis.py  mcmc_analysis.py  rm_fit.py  rv_fit.py  rv_fit_detrend.py  system_params.py  tess_ffi_lc.py  tess_ttv.py  time_series_analysis.py  time_series_analysis_sophiedrs.py  transit_fit.py  transit_fit_gp.py  transit_rv_fit.py  transits.py
src/exoplanet_analysis_tools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tools/: bump_version.py  update_from_zip.sh
ttvs/: HATS-24_000.ttv  TOI-1201_000.ttv  TOI-1759_000.ttv
