[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exoplanet-analysis-tools"
dynamic = ["version"]
description = "Tools for the joint analysis of radial velocity and photometry data to obtain the best-fit parameters of exoplanets"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Eder Martioli", email = "emartioli@lna.br" },
]
keywords = ["astronomy", "exoplanets", "transits", "radial-velocity", "TESS", "MCMC"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "astropy",
    "astroquery",
    "emcee",
    "corner",
    "batman-package",
    "celerite",
    "george",
    "lightkurve",
    "PyAstronomy",
    "uncertainties",
    "mpmath",
    "scikit-learn",
    "h5py",
]

[project.urls]
Homepage = "https://github.com/edermartioli/exoplanet-analysis"
Repository = "https://github.com/edermartioli/exoplanet-analysis"
Issues = "https://github.com/edermartioli/exoplanet-analysis/issues"

[project.scripts]
transit_fit = "exoplanet_analysis.scripts.transit_fit:main"
rv_fit = "exoplanet_analysis.scripts.rv_fit:main"
transit_rv_fit = "exoplanet_analysis.scripts.transit_rv_fit:main"
transit_fit_gp = "exoplanet_analysis.scripts.transit_fit_gp:main"
rv_fit_detrend = "exoplanet_analysis.scripts.rv_fit_detrend:main"
transits_analysis = "exoplanet_analysis.scripts.transits:main"
detect_transits = "exoplanet_analysis.scripts.detect_transits:main"
gls_analysis = "exoplanet_analysis.scripts.gls_analysis:main"
gp_analysis = "exoplanet_analysis.scripts.gp_analysis:main"
mcmc_analysis = "exoplanet_analysis.scripts.mcmc_analysis:main"
time_series_analysis = "exoplanet_analysis.scripts.time_series_analysis:main"
time_series_analysis_sophiedrs = "exoplanet_analysis.scripts.time_series_analysis_sophiedrs:main"
get_derived_parameters = "exoplanet_analysis.scripts.get_derived_parameters:main"
tess_ttv = "exoplanet_analysis.scripts.tess_ttv:main"
tess_ffi_lc = "exoplanet_analysis.scripts.tess_ffi_lc:main"
check_tess_data = "exoplanet_analysis.scripts.check_tess_data:main"
system_params = "exoplanet_analysis.scripts.system_params:main"
rm_fit = "exoplanet_analysis.scripts.rm_fit:main"
fit_opd_transits = "exoplanet_analysis.scripts.fit_opd_transits:main"
fit_sparc4_transits = "exoplanet_analysis.scripts.fit_sparc4_transits:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.dynamic]
version = { attr = "exoplanet_analysis.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
exoplanet_analysis = ["data/*.json", "data/tess_claret_ldc/*.dat"]
